Sat Feb  5 17:49:43 CET 2000  Sven Neumann <sven@gimp.org>

	* libgimp/gimpexport.[ch]: cleanup to make it documentable

2000-02-05  Michael Natterer  <mitch@gimp.org>

	* gimprc.in
	* user_install
	* user_install.bat: renamed the "gflares" dir to "gflare" in all
	places because this seems to be the naming convention of all the
	other plug-in dirs.

	* libgimp/gimpwidgets.[ch]:

	- gimp_random_seed_new(): return the spinbutton and the time
	  toggle as pointers.
	- gimp_scale_entry_new(): allow the spinbutton to have a larger
	  range of possible values than the scale.

	* plugins/[all calls to the above two functions]: changed the
	calls accordingly.
	Did some more ui updates in some of these plugins (Frames saying
	"Parameter Settings", spacing etc.)

	* plug-ins/gflare/Makefile.am
	* plug-ins/gflare/gflare.c: hacked it to match the plugin ui
	standards. Didn't get rid of the gradient menus.

Sat Feb  5 13:22:47 CET 2000  Sven Neumann <sven@gimp.org>

	* app/global_edit.c: Reverted Stanislavs change. While I think that 
	using the FG color would make sense, it is definitely too late to 
	change this now since it breaks lots of scripts and plugins.

	* tools/pdbgen/pdb/paths.pdb:
	* internal_procs.c:
	* paths_cmds.c: make it compile again

2000-02-05  Tor Lillqvist  <tml@iki.fi>

	* gimprc.in: user_install creates the gflare directory as
	"gflares" (not "gflare"), so use that form here, too.

	* gimprc.win32: Update to match the Unix version.

	* app/ops_buttons.c: Include gimpintl.h.

	* app/preferences_dialog.c (file_pref_cmd_callback): I18n for the
	Pixels/%s string. It used to come out as "Pixels/tuuma" in
	Finnish, for instance.

	* plug-ins/gflare/gflare.c: Portability.

	* libgimp/gimpui.def: 
	* plug-ins/makefile.{cygwin,msc}
	* modules/makefile.{cygwin,msc}: Updates.

2000-02-05  Jay Cox  <jaycox@earthlink.net>

	* app/paths_cmds.c, tools/pdbgen/pdb/paths.pdb:
	removed the gimp_path_set_tattoo function because tattoos are
 	"unique and permanent"
